--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt_BR">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/book.png" />
+    <link rel="icon" type="image/svg+xml" href="/document.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="index.css">
